# cpp-demo-projects

./: .gitignore  .gitmodules
arrow/arrow_abi_demo/: CMakeLists.txt  README.md
arrow/arrow_abi_demo/cpp/: arrow_abi_demo.cpp  nano_arrow_demo.cpp
arrow/arrow_abi_demo/java/: pom.xml
arrow/arrow_abi_demo/java/src/main/java/org/liuyehcf/: ArrowStreamConsumer.java  ArrowStreamProvider.java
arrow/nano_arrow_demo/: CMakeLists.txt  README.md
arrow/nano_arrow_demo/cpp/: nano_arrow_demo.cpp
arrow/nano_arrow_demo/java/: pom.xml
arrow/nano_arrow_demo/java/src/main/java/org/liuyehcf/: ArrowStreamConsumer.java  ArrowStreamProvider.java
aws/aws-sdk-cpp-demo/: CMakeLists.txt  README.md
aws/aws-sdk-cpp-demo/contrib/: aws-sdk-cpp
aws/aws-sdk-cpp-demo/src/: main.cpp
brpc/echo_server_demo/: CMakeLists.txt  README.md
brpc/echo_server_demo/src/client/: server.cpp
brpc/echo_server_demo/src/server/: server.cpp
hash/paimon_hash/: CMakeLists.txt  README.md
hash/paimon_hash/include/: paimon_hash.h
hash/paimon_hash/test/: test_paimon_hash.cpp
jni/bthread_jni_issue/: CMakeLists.txt  README.md
jni/bthread_jni_issue/src/java/: SynchronizedServer.java
jni/bthread_jni_issue/src/proto/: echo.proto
jni/bthread_jni_issue/src/server/: server.cpp
jni/jni_best_practice/: CMakeLists.txt  README.md
jni/jni_best_practice/src/: jni_utils.cpp  jni_utils.h
jni/jni_best_practice/test/: test.cpp
jni/jni_best_practice/test/java/org/liuyehcf/jni/: MethodReturnType.java
jni/jni_signal_handler/: CMakeLists.txt  README.md
jni/jni_signal_handler/src/: jni_signal_handler.cpp
jni/jni_signal_handler/src/java/: TriggerGC.java
jni/jni_spring_fat_jar_demo/: README.md  jni_spring_fat_jar_demo.cpp
jni/jni_spring_fat_jar_demo/java/: pom.xml
jni/jni_spring_fat_jar_demo/java/src/main/java/org/liuyehcf/: Main.java
jni/jni_utils/: CMakeLists.txt  README.md
jni/jni_utils/contrib/: googletest
jni/jni_utils/src/: jni_utils.cpp  jni_utils.h
jni/jni_utils/test/: test.cpp
jni/jni_utils/test/java/org/liuyehcf/jni/: ThrowException.java  UtilMethods.java
lance/lance_rust_ffi_demo/: .gitignore  CMakeLists.txt  README.md  cmake_install.cmake
lance/lance_rust_ffi_demo/cpp/include/: lance_ffi.h
lance/lance_rust_ffi_demo/cpp/src/: main.cpp
lance/lance_rust_ffi_demo/rust/: Cargo.toml
lance/lance_rust_ffi_demo/rust/src/: ffi.rs  lance_operations.rs  lib.rs
leveldb/leveldb_demo/: CMakeLists.txt  README.md
leveldb/leveldb_demo/src/: main.cpp
libunwind/coredump_demo/: CMakeLists.txt  README.md
libunwind/coredump_demo/src/: coredump_demo.cpp
pocoproject/configuration/poco_xml_demo/: CMakeLists.txt  README.md  main.cpp
pocoproject/configuration/poco_xml_demo/contrib/: poco
pocoproject/logger/poco_logger_color_demo/: CMakeLists.txt  README.md  poco_logger_color_demo.cpp
protobuf/protobuf_demo/: CMakeLists.txt  README.md
protobuf/protobuf_demo/src/: main.cpp
protobuf/protobuf_demo/src/proto/: person.proto
thrift/hive_metastore_demo/: CMakeLists.txt  README  README.md
thrift/hive_metastore_demo/include/: TSasl.h  TSaslClientTransport.h  TSaslTransport.h
thrift/hive_metastore_demo/src/: TSasl.cpp  TSaslClientTransport.cpp  TSaslTransport.cpp  main.cpp
thrift/hive_metastore_demo/thrift/: hive_metastore.thrift
