[package]
name = "lance_ffi"
version = "0.1.0"
edition = "2021"

[dependencies]
lance = "0.24.1"
arrow = "54.2.1"
arrow-array = "54.2.1"
arrow-schema = "54.2.1"
arrow-ipc = "54.2.1"
arrow-flight = "54.2.1"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"

[lib]
name = "lance_ffi"
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"
